Attempt at fixing the issue with h1 on R.1 overflowing the right edge of the panel. By applying word-break: break-word.

--- a/frontend/assets/css/text-viewer.scss
+++ b/frontend/assets/css/text-viewer.scss
@@ -431,6 +431,7 @@ $render-sic: false;
     font-size: 2em;
     // TODO: center in panel, not just text?
     text-align: center;
+    word-break: break-word;
   }
   h2,
   .tei-fw.tei-type-head {
